# ChangeLog for Gentoo Linux System Intialization ("rc") scripts 
# Copyright 2002-2004 Gentoo Foundation; Distributed under the GPL
# Written by Daniel Robbins (drobbins@gentoo.org)

* rc-scripts 1.5.3 (18 Aug 2004)

  18 Aug 2004; Aron Griffis <agriffis@gentoo.org>:

    Fix bug 60719 (request for better error messages from runscript)
    by allowing errors to show on the screen when they're encountered
    in wrap_rcscript

    Apply Spock's bootsplash patch from bug 45784.  This moves most of
    the splash functionality out of baselayout.

  13 Aug 2004; Aron Griffis <agriffis@gentoo.org>:

    Don't export PS1.  Continuation of bug 26951, comments 60-62.

* rc-scripts 1.5.2 (02 Aug 2004)

  02 Aug 2004; Aron Griffis <agriffis@gentoo.org>:

    Related to bug 38955, don't set INPUTRC.  Instead patch bash so
    that it looks for /etc/inputrc automatically if ~/.inputrc is
    missing.  This is better than using INPUTRC since that will
    override even after the user creates ~/.inputrc.

    Fix bug 54275: Don't set INFODIR.  The correct variable used by
    texinfo is INFOPATH, which is already set in 00basic.  Setting
    INFODIR is useless, and breaks a NetBSD cross compile from Gentoo

  01 Aug 2004; Aron Griffis <agriffis@gentoo.org>:

    Fix bug 58805: net.eth0 should use bridge so that bridge
    interfaces are configured prior to net.br0 running

    Fix bug 56856: Get rid of net.rej and integrate missing stuff to
    conf.d/net

    Apply half of spock's patch in bug 45784: Check for
    conf.d/bootsplash instead of conf.d/bootsplash.conf

    Fix bug 51351: Quote parsed output of /proc/filesystems to handle
    octal sequences in mountpoint such as encoded spaces (\040)

    Fix bug 46680: Add cifs support to localmount and netmount.
    Thanks to Ronald Moesbergen for the patches

  21 Jul 2004; Aron Griffis <agriffis@gentoo.org>:

    Fix bug 26952: Use /etc/bash/bashrc to setup PS1, testing $- to