@@ -2,6 +2,11 @@
 # Copyright 2002-2004 Gentoo Foundation; Distributed under the GPL
 # Written by Daniel Robbins (drobbins@gentoo.org)
 
+  14 Sep 2004; Aron Griffis <agriffis@gentoo.org>:
+
+    Commit dm-crypt enablement patch from Tigger (Rob Holland) in
+    bug 26953
+
 * rc-scripts 1.5.3 (18 Aug 2004)
 
   18 Aug 2004; Aron Griffis <agriffis@gentoo.org>:
